syntax = "proto3";

package protosol.solana.rpc_client.v1;

import "protosol/solana/type/v1/commitment_level.proto";

option go_package = "github.com/BRBussy/protosol/lib/go/protosol/solana/rpc_client/v1;rpc_client_v1";

service Service {
  rpc GetMinimumBalanceForRentExemption(GetMinimumBalanceForRentExemptionRequest) returns (GetMinimumBalanceForRentExemptionResponse);
}

message GetMinimumBalanceForRentExemptionRequest {
    uint64 data_length = 1;
    protosol.solana.type.v1.CommitmentLevel commitment_level = 2;
}

message GetMinimumBalanceForRentExemptionResponse {
    uint64 balance = 1;
}